// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cross-array.json format 1`] = `
     : ====================================options=====================================
     : parsers: ["json"]
     : rangeEnd: 51
     : rangeStart: 12
     :                                                       printWidth: 80 (default) |
     : =====================================input======================================
   1 | [{
   2 | a: [
   3 | 1,
>  4 |  2,  3,4,5,6,      7,
     |  ^^^^^^^^^^^^^^^^^^^^
>  5 | 8
     | ^
>  6 | ],
     | ^^
>  7 | b: [1, 2,      3, 4],
     | ^^^^^^^^^^^^^
   8 | c: [1,     2]
   9 | }
  10 | ,{a:      2}]
  11 |
     : =====================================output=====================================
     : [{
     :   "a": [1, 2, 3, 4, 5, 6, 7, 8],
     :   "b": [1, 2, 3, 4],
     :   "c": [1, 2]
     : }
     : ,{a:      2}]
     :
     : ================================================================================
`;

exports[`cross-array2.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 36
    : rangeStart: 11
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | {
  2 | a: [
  3 | 1,
> 4 |  2,  3,4,5,6,   [1, 2,      3, 4],   7,
    |  ^^^^^^^^^^^^^^^^^^^^^^^^^
  5 | 8
  6 | ],
  7 | c: [1,     2]
  8 | }
  9 |
    : =====================================output=====================================
    : {
    : a: [1, 2, 3, 4, 5, 6, [1, 2, 3, 4], 7, 8],
    : c: [1,     2]
    : }
    :
    : ================================================================================
`;

exports[`cross-object.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 31
    : rangeStart: 12
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | [{a:
> 2 | { "b": 2, "c": 3 },
    |        ^^^^^^^^^^^^
> 3 | b: {d:4},
    | ^^^^^^
  4 | c: {d:     6}
  5 | },
  6 | {a:           1}]
  7 |
    : =====================================output=====================================
    : [{ "a": { "b": 2, "c": 3 }, "b": { "d": 4 }, "c": { "d": 6 } },
    : {a:           1}]
    :
    : ================================================================================
`;

exports[`cross-object-2.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 28
    : rangeStart: 11
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | {a:
> 2 | { "b": 2, "c": 3,
    |        ^^^^^^^^^^
> 3 | d: {d:4}, },
    | ^^^^^^
  4 | c: {d:     6}
  5 | }
  6 |
    : =====================================output=====================================
    : {a:
    : { "b": 2, "c": 3, "d": { "d": 4 } },
    : c: {d:     6}
    : }
    :
    : ================================================================================
`;

exports[`identifier.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 4
    : rangeStart: 1
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | {"a":1, "b":2}
    |  ^^^
  2 |
    : =====================================output=====================================
    : {"a":1, "b":2}
    :
    : ================================================================================
`;

exports[`identifier-2.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 3
    : rangeStart: 2
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | Infinity
    |   ^
  2 |
    : =====================================output=====================================
    : Infinity
    : ================================================================================
`;

exports[`inside-array.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 30
    : rangeStart: 11
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | {
  2 | a: [
  3 | 1,
> 4 |  2,  3,4,5,6,      7,
    |  ^^^^^^^^^^^^^^^^^^^
  5 | 8
  6 | ],
  7 | b: [1, 2,      3, 4]
  8 | }
  9 |
    : =====================================output=====================================
    : {
    : a: [1, 2, 3, 4, 5, 6, 7, 8],
    : b: [1, 2,      3, 4]
    : }
    :
    : ================================================================================
`;

exports[`inside-object.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 20
    : rangeStart: 11
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | {a:
> 2 | { "b": 2, "c": 3 },
    |        ^^^^^^^^^
  3 | b: {d:4}
  4 | }
  5 |
    : =====================================output=====================================
    : {a:
    : { "b": 2, "c": 3 },
    : b: {d:4}
    : }
    :
    : ================================================================================
`;

exports[`issue-4009.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 19
    : rangeStart: 1
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | {
    |  ^
> 2 |     "foo": "bar"
    | ^^^^^^^^^^^^^^^^
> 3 | }
    | ^
  4 |
    : =====================================output=====================================
    : {
    :   "foo": "bar"
    : }
    :
    : ================================================================================
`;

exports[`issue-7116.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 7
    : rangeStart: 4
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | {"b": 2}
    |     ^^^
  2 |
    : =====================================output=====================================
    : { "b": 2 }
    :
    : ================================================================================
`;

exports[`issue2297.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 6
    : rangeStart: 5
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | {"a":1, "b":2}
    |      ^
  2 |
    : =====================================output=====================================
    : {"a":1, "b":2}
    :
    : ================================================================================
`;

exports[`number.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 16
    : rangeStart: 7
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | { "b": 2, "c": 3 }
    |        ^^^^^^^^^
  2 |
    : =====================================output=====================================
    : { "b": 2, "c": 3 }
    :
    : ================================================================================
`;

exports[`template-literal.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 7
    : rangeStart: 6
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | [
> 2 | {a:\`a\`,n:
    |     ^
  3 | ''},
  4 | {a:\`a\`,n:
  5 | ''}
  6 | ]
  7 |
    : =====================================output=====================================
    : [
    : {a:\`a\`,n:
    : ''},
    : {a:\`a\`,n:
    : ''}
    : ]
    :
    : ================================================================================
`;

exports[`template-literal-2.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 7
    : rangeStart: 4
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | [
> 2 | {a:\`a\`,n:
    |   ^^^
  3 | ''},
  4 | {a:\`a\`,n:
  5 | ''}
  6 | ]
  7 |
    : =====================================output=====================================
    : [
    : { "a": \`a\`, "n": "" },
    : {a:\`a\`,n:
    : ''}
    : ]
    :
    : ================================================================================
`;

exports[`unary-expression.json format 1`] = `
     : ====================================options=====================================
     : parsers: ["json"]
     : rangeEnd: 15
     : rangeStart: 9
     :                                                       printWidth: 80 (default) |
     : =====================================input======================================
   1 | {a:
   2 | [
   3 | 1,
>  4 | -2,
     | ^^^
>  5 | -3
     | ^^
   6 |
   7 | ],
   8 | b: [1,    2]
   9 | }
  10 |
     : =====================================output=====================================
     : {a:
     : [1, -2, -3],
     : b: [1,    2]
     : }
     :
     : ================================================================================
`;

exports[`unary-expression-2.json format 1`] = `
    : ====================================options=====================================
    : parsers: ["json"]
    : rangeEnd: 9
    : rangeStart: 2
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | -
> 2 | 2.00000
    | ^^^^^^^
  3 |
    : =====================================output=====================================
    : -
    : 2.0
    :
    : ================================================================================
`;
